@@ -19,47 +19,43 @@ package org.apache.kafka.connect.mirror;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.apache.kafka.clients.producer.Callback;
+import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.RecordMetadata;
-import org.apache.kafka.common.header.Header;
-import org.apache.kafka.common.header.internals.RecordHeader;
-import org.apache.kafka.common.record.TimestampType;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.header.Header;
 import org.apache.kafka.common.header.Headers;
+import org.apache.kafka.common.header.internals.RecordHeader;
 import org.apache.kafka.common.header.internals.RecordHeaders;
-import org.apache.kafka.connect.mirror.MirrorSourceTask.PartitionState;
+import org.apache.kafka.common.record.TimestampType;
+import org.apache.kafka.connect.mirror.OffsetSyncWriter.PartitionState;
 import org.apache.kafka.connect.source.SourceRecord;
-
 import org.apache.kafka.connect.source.SourceTaskContext;
 import org.apache.kafka.connect.storage.OffsetStorageReader;
+
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.Semaphore;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
-import static org.mockito.Mockito.doReturn;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.mock;
-
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.verifyNoInteractions;
 
 public class MirrorSourceTaskTest {
 
@@ -72,10 +68,8 @@ public class MirrorSourceTaskTest {
         headers.add("header2", new byte[]{'p', 'q', 'r', 's', 't'});
         ConsumerRecord<byte[], byte[]> consumerRecord = new ConsumerRecord<>("topic1", 2, 3L, 4L,
             TimestampType.CREATE_TIME, 5, 6, key, value, headers, Optional.empty());
-        @SuppressWarnings("unchecked")
-        KafkaProducer<byte[], byte[]> producer = mock(KafkaProducer.class);
         MirrorSourceTask mirrorSourceTask = new MirrorSourceTask(null, null, "cluster7",
-                new DefaultReplicationPolicy(), 50, producer, null, null, null);
+                new DefaultReplicationPolicy(), null);
         SourceRecord sourceRecord = mirrorSourceTask.convertRecord(consumerRecord);
         assertEquals("cluster7.topic1", sourceRecord.topic(),
                 "Failure on cluster7.topic1 consumerRecord serde");
@@ -97,7 +91,7 @@ public class MirrorSourceTaskTest {
 
     @Test
     public void testOffsetSync() {
-        MirrorSourceTask.PartitionState partitionState = new MirrorSourceTask.PartitionState(50);
+        OffsetSyncWriter.PartitionState partitionState = new OffsetSyncWriter.PartitionState(50);
 
         assertTrue(partitionState.update(0, 100), "always emit offset sync on first update");
         assertTrue(partitionState.shouldSyncOffsets, "should sync offsets");
@@ -133,7 +127,7 @@ public class MirrorSourceTaskTest {
 
     @Test
     public void testZeroOffsetSync() {
-        MirrorSourceTask.PartitionState partitionState = new MirrorSourceTask.PartitionState(0);
+        OffsetSyncWriter.PartitionState partitionState = new OffsetSyncWriter.PartitionState(0);
 
         // if max offset lag is zero, should always emit offset syncs
         assertTrue(partitionState.update(0, 100), "zeroOffsetSync downStreamOffset 100 is incorrect");
@@ -182,13 +176,12 @@ public class MirrorSourceTaskTest {
                 TimestampType.CREATE_TIME, key1.length, value1.length, key1, value1, headers, Optional.empty()));
         consumerRecordsList.add(new ConsumerRecord<>(topicName, 1, 1, System.currentTimeMillis(),
                 TimestampType.CREATE_TIME, key2.length, value2.length, key2, value2, headers, Optional.empty()));
+        final TopicPartition tp = new TopicPartition(topicName, 0);
         ConsumerRecords<byte[], byte[]> consumerRecords =
-                new ConsumerRecords<>(Collections.singletonMap(new TopicPartition(topicName, 0), consumerRecordsList));
+                new ConsumerRecords<>(Map.of(tp, consumerRecordsList), Map.of(tp, new OffsetAndMetadata(2, Optional.empty(), "")));
 
         @SuppressWarnings("unchecked")
         KafkaConsumer<byte[], byte[]> consumer = mock(KafkaConsumer.class);
-        @SuppressWarnings("unchecked")
-        KafkaProducer<byte[], byte[]> producer = mock(KafkaProducer.class);
         when(consumer.poll(any())).thenReturn(consumerRecords);
 
         MirrorSourceMetrics metrics = mock(MirrorSourceMetrics.class);
@@ -196,7 +189,7 @@ public class MirrorSourceTaskTest {
         String sourceClusterName = "cluster1";
         ReplicationPolicy replicationPolicy = new DefaultReplicationPolicy();
         MirrorSourceTask mirrorSourceTask = new MirrorSourceTask(consumer, metrics, sourceClusterName,
-                replicationPolicy, 50, producer, null, null, null);
+                replicationPolicy, null);
         List<SourceRecord> sourceRecords = mirrorSourceTask.poll();
 
         assertEquals(2, sourceRecords.size());
@@ -256,7 +249,7 @@ public class MirrorSourceTaskTest {
         });
 
         MirrorSourceTask mirrorSourceTask = new MirrorSourceTask(mockConsumer, null, null,
-                new DefaultReplicationPolicy(), 50, null, null, null, null);
+                new DefaultReplicationPolicy(), null);
         mirrorSourceTask.initialize(mockSourceTaskContext);
 
         // Call test subject
@@ -297,21 +290,20 @@ public class MirrorSourceTaskTest {
         String sourceClusterName = "cluster1";
         ReplicationPolicy replicationPolicy = new DefaultReplicationPolicy();
         MirrorSourceTask mirrorSourceTask = new MirrorSourceTask(consumer, metrics, sourceClusterName,
-                replicationPolicy, 50, producer, null, null, null);
+                replicationPolicy, null);
 
         SourceRecord sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, 0, 0, System.currentTimeMillis(),
                 TimestampType.CREATE_TIME, key1.length, value1.length, key1, value1, headers, Optional.empty()));
 
         // Expect that commitRecord will not throw an exception
         mirrorSourceTask.commitRecord(sourceRecord, null);
-        verifyNoInteractions(producer);
     }
 
     @Test
     public void testSendSyncEvent() {
         byte[] recordKey = "key".getBytes();
         byte[] recordValue = "value".getBytes();
-        int maxOffsetLag = 50;
+        long maxOffsetLag = 50;
         int recordPartition = 0;
         int recordOffset = 0;
         int metadataOffset = 100;
@@ -323,15 +315,16 @@ public class MirrorSourceTaskTest {
 
         @SuppressWarnings("unchecked")
         KafkaConsumer<byte[], byte[]> consumer = mock(KafkaConsumer.class);
-        @SuppressWarnings("unchecked")
-        KafkaProducer<byte[], byte[]> producer = mock(KafkaProducer.class);
         MirrorSourceMetrics metrics = mock(MirrorSourceMetrics.class);
-        Semaphore outstandingOffsetSyncs = new Semaphore(1);
         PartitionState partitionState = new PartitionState(maxOffsetLag);
         Map<TopicPartition, PartitionState> partitionStates = new HashMap<>();
+        OffsetSyncWriter offsetSyncWriter = mock(OffsetSyncWriter.class);
+        when(offsetSyncWriter.maxOffsetLag()).thenReturn(maxOffsetLag);
+        doNothing().when(offsetSyncWriter).firePendingOffsetSyncs();
+        doNothing().when(offsetSyncWriter).promoteDelayedOffsetSyncs();
 
         MirrorSourceTask mirrorSourceTask = new MirrorSourceTask(consumer, metrics, sourceClusterName,
-                replicationPolicy, maxOffsetLag, producer, outstandingOffsetSyncs, partitionStates, topicName);
+                replicationPolicy, offsetSyncWriter);
 
         SourceRecord sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, recordPartition,
                 recordOffset, System.currentTimeMillis(), TimestampType.CREATE_TIME, recordKey.length,
@@ -340,101 +333,17 @@ public class MirrorSourceTaskTest {
         TopicPartition sourceTopicPartition = MirrorUtils.unwrapPartition(sourceRecord.sourcePartition());
         partitionStates.put(sourceTopicPartition, partitionState);
         RecordMetadata recordMetadata = new RecordMetadata(sourceTopicPartition, metadataOffset, 0, 0, 0, recordPartition);
-
-        ArgumentCaptor<Callback> producerCallback = ArgumentCaptor.forClass(Callback.class);
-        when(producer.send(any(), producerCallback.capture())).thenAnswer(mockInvocation -> {
-            producerCallback.getValue().onCompletion(null, null);
-            return null;
-        });
+        doNothing().when(offsetSyncWriter).maybeQueueOffsetSyncs(eq(sourceTopicPartition), eq((long) recordOffset), eq(recordMetadata.offset()));
 
         mirrorSourceTask.commitRecord(sourceRecord, recordMetadata);
         // We should have dispatched this sync to the producer
-        verify(producer, times(1)).send(any(), any());
+        verify(offsetSyncWriter, times(1)).maybeQueueOffsetSyncs(eq(sourceTopicPartition), eq((long) recordOffset), eq(recordMetadata.offset()));
+        verify(offsetSyncWriter, times(1)).firePendingOffsetSyncs();
 
         mirrorSourceTask.commit();
         // No more syncs should take place; we've been able to publish all of them so far
-        verify(producer, times(1)).send(any(), any());
-
-        recordOffset = 2;
-        metadataOffset = 102;
-        recordMetadata = new RecordMetadata(sourceTopicPartition, metadataOffset, 0, 0, 0, recordPartition);
-        sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, recordPartition,
-                recordOffset, System.currentTimeMillis(), TimestampType.CREATE_TIME, recordKey.length,
-                recordValue.length, recordKey, recordValue, headers, Optional.empty()));
-
-        // Do not release outstanding sync semaphore
-        doReturn(null).when(producer).send(any(), producerCallback.capture());
-
-        mirrorSourceTask.commitRecord(sourceRecord, recordMetadata);
-        // We should have dispatched this sync to the producer
-        verify(producer, times(2)).send(any(), any());
-
-        mirrorSourceTask.commit();
-        // No more syncs should take place; we've been able to publish all of them so far
-        verify(producer, times(2)).send(any(), any());
-
-        // Do not send sync event
-        recordOffset = 4;
-        metadataOffset = 104;
-        recordMetadata = new RecordMetadata(sourceTopicPartition, metadataOffset, 0, 0, 0, recordPartition);
-        sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, recordPartition,
-                recordOffset, System.currentTimeMillis(), TimestampType.CREATE_TIME, recordKey.length,
-                recordValue.length, recordKey, recordValue, headers, Optional.empty()));
-
-        mirrorSourceTask.commitRecord(sourceRecord, recordMetadata);
-        mirrorSourceTask.commit();
-
-        // We should not have dispatched any more syncs to the producer; there were too many already in flight
-        verify(producer, times(2)).send(any(), any());
-
-        // Now the in-flight sync has been ack'd
-        producerCallback.getValue().onCompletion(null, null);
-        mirrorSourceTask.commit();
-        // We should dispatch the offset sync that was queued but previously not sent to the producer now
-        verify(producer, times(3)).send(any(), any());
-
-        // Ack the latest sync immediately
-        producerCallback.getValue().onCompletion(null, null);
-
-        // Should send sync event
-        recordOffset = 6;
-        metadataOffset = 106;
-        recordMetadata = new RecordMetadata(sourceTopicPartition, metadataOffset, 0, 0, 0, recordPartition);
-        sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, recordPartition,
-                recordOffset, System.currentTimeMillis(), TimestampType.CREATE_TIME, recordKey.length,
-                recordValue.length, recordKey, recordValue, headers, Optional.empty()));
-
-        mirrorSourceTask.commitRecord(sourceRecord, recordMetadata);
-        // We should have dispatched this sync to the producer
-        verify(producer, times(4)).send(any(), any());
-        // Ack the latest sync immediately
-        producerCallback.getValue().onCompletion(null, null);
-
-        mirrorSourceTask.commit();
-        // No more syncs should take place; we've been able to publish all of them so far
-        verify(producer, times(4)).send(any(), any());
-
-        // Don't skip the upstream record, so that the offset.lag.max determines whether the offset is emitted.
-        recordOffset = 7;
-        metadataOffset = 107;
-        recordMetadata = new RecordMetadata(sourceTopicPartition, metadataOffset, 0, 0, 0, recordPartition);
-        sourceRecord = mirrorSourceTask.convertRecord(new ConsumerRecord<>(topicName, recordPartition,
-                recordOffset, System.currentTimeMillis(), TimestampType.CREATE_TIME, recordKey.length,
-                recordValue.length, recordKey, recordValue, headers, Optional.empty()));
-
-        mirrorSourceTask.commitRecord(sourceRecord, recordMetadata);
-        // We should not have dispatched any more syncs to the producer; this sync was within offset.lag.max of the previous one.
-        verify(producer, times(4)).send(any(), any());
-
-        mirrorSourceTask.commit();
-        // We should dispatch the offset sync that was delayed until the next periodic offset commit.
-        verify(producer, times(5)).send(any(), any());
-        // Ack the latest sync immediately
-        producerCallback.getValue().onCompletion(null, null);
-
-        mirrorSourceTask.commit();
-        // No more syncs should take place; we've been able to publish all of them so far
-        verify(producer, times(5)).send(any(), any());
+        verify(offsetSyncWriter, times(1)).promoteDelayedOffsetSyncs();
+        verify(offsetSyncWriter, times(2)).firePendingOffsetSyncs();
     }
 
     private void compareHeaders(List<Header> expectedHeaders, List<org.apache.kafka.connect.header.Header> taskHeaders) {
