@@ -20,10 +20,11 @@ package org.apache.kafka.coordinator.group.classic;
 import org.apache.kafka.common.message.DescribeGroupsResponseData;
 import org.apache.kafka.common.message.JoinGroupRequestData.JoinGroupRequestProtocol;
 import org.apache.kafka.common.message.JoinGroupRequestData.JoinGroupRequestProtocolCollection;
+
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
@@ -193,7 +194,7 @@ public class ClassicGroupMemberTest {
         );
 
         assertThrows(IllegalArgumentException.class, () ->
-            member.vote(Collections.singleton("unknown"))
+            member.vote(Set.of("unknown"))
         );
     }
 
@@ -289,7 +290,7 @@ public class ClassicGroupMemberTest {
 
     @Test
     public void testDescribe() {
-        JoinGroupRequestProtocolCollection protocols = new JoinGroupRequestProtocolCollection(Collections.singletonList(
+        JoinGroupRequestProtocolCollection protocols = new JoinGroupRequestProtocolCollection(List.of(
             new JoinGroupRequestProtocol()
                 .setName("range")
                 .setMetadata(new byte[]{0})
