@@ -17,13 +17,13 @@
 
 package org.apache.kafka.trogdor.workload;
 
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonProperty;
 import org.apache.kafka.trogdor.task.TaskController;
 import org.apache.kafka.trogdor.task.TaskSpec;
 import org.apache.kafka.trogdor.task.TaskWorker;
 
-import java.util.ArrayList;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
+
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -33,7 +33,7 @@ import java.util.TreeSet;
  * The specification for a task which connects and disconnects many times a
  * second to stress the broker.
  */
-public class ConnectionStressSpec extends TaskSpec {
+public final class ConnectionStressSpec extends TaskSpec {
     private final List<String> clientNodes;
     private final String bootstrapServers;
     private final Map<String, String> commonClientConf;
@@ -46,7 +46,6 @@ public class ConnectionStressSpec extends TaskSpec {
         FETCH_METADATA
     }
 
-    @SuppressWarnings("this-escape")
     @JsonCreator
     public ConnectionStressSpec(@JsonProperty("startMs") long startMs,
             @JsonProperty("durationMs") long durationMs,
@@ -58,7 +57,7 @@ public class ConnectionStressSpec extends TaskSpec {
             @JsonProperty("action") ConnectionStressAction action) {
         super(startMs, durationMs);
         this.clientNodes = (clientNodes == null) ? Collections.emptyList() :
-            Collections.unmodifiableList(new ArrayList<>(clientNodes));
+            List.copyOf(clientNodes);
         this.bootstrapServers = (bootstrapServers == null) ? "" : bootstrapServers;
         this.commonClientConf = configOrEmptyMap(commonClientConf);
         this.targetConnectionsPerSec = targetConnectionsPerSec;
